--- a/ansible-roles-for-tf/roles/mysql/tasks/main.yml
+++ b/ansible-roles-for-tf/roles/mysql/tasks/main.yml
@@ -18,4 +18,4 @@
     state: started
 
 - name: Create username and password
-  ansible.builtin.command: "mysql_secure_installation --set-root-pass {{ lookup('aws_ssm', '/robotshop/dev/mysql_root_pass', region='us-east-1', decrypt=True ) }}"
+  ansible.builtin.command: "mysql_secure_installation --set-root-pass {{ lookup('aws_ssm', '/robotshop/{{environment}}/mysql_root_pass', region='us-east-1', decrypt=True ) }}"
